--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
     <head>
-        <meta name="author" content="Cheshire Cat">
+        <meta name="author" content="Mo Tar">
     </head>
     
     <body>
